--- a/src/App.css
+++ b/src/App.css
@@ -482,3 +482,23 @@ h5 {
 .bg-warning {
   background-image: linear-gradient(45deg, #ffc107, #e0a800);
 }
+
+.logo-main{
+width: 70%;
+margin-left: 10%;
+}
+
+h2{
+  font-size: 1.2rem;
+  font-weight: 600;
+  font-style: italic;
+}
+h3{
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+h4{
+  font-size: 16px;
+  /* font-weight: 500; */
+}
