--- a/src/App.css
+++ b/src/App.css
@@ -72,130 +72,11 @@ div.myDiv input {
 .main-card {
   padding: 0px;
 }
-.card-header{
-  background-color: #2c7a02c4 !important;
-  color: white
-}
 
-.main-card .card-header {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.card-body{
-  background: #7dc35842 !important;
-}
-.MTableToolbar {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-
-.MTableToolbar-root[class^="MTableToolbar-root"] {
-  background-color: #2c7a02c4 !important;
-  color: white !important;
-}
-.MTableToolbar-root-33 {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.MTableToolbar-root-19 {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.MTableToolbar-root-47 {
-  background-color: #2c7a02c4 !important;
-  color: white 
-}
-.MTableToolbar-root-117{
-  background-color: #2c7a02c4 !important;
-  color: white 
-}
-.MTableToolbar-root-61{
-  background-color: #2c7a02c4 !important;
-  color: white  
-}
-.MuiTable-root {
-  background: #7dc35842;
-}
-.MTableToolbar-root-131 {
-  background-color: #2c7a02c4 !important;
-  color: white  
-}
-.MTableToolbar-root-75 {
-  background-color: #2c7a02c4 !important;
-  color: white  
-}
-.MTableToolbar-root-159 {
-  background-color: #2c7a02c4 !important;
-  color: white  
-}
-.MTableToolbar-root-215 {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.btn-primary{
-  background-color: #2c7a02c4!important;
-  border-color: #2c7a02c4;
-  color: white
-}
-.MTableToolbar-root-103 {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.MTableToolbar-root-299 {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.MTableToolbar-root-243 {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.MTableToolbar-root-327{
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.MTableToolbar-root-551 {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.MTableToolbar-root-607 {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.MTableToolbar-root-649 {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.MTableToolbar-root-173 {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.MTableToolbar-root-271 {
-  background-color: #2c7a02c4 !important;
-  color: white
-}
-.secondary-card {
-  padding: 0px;
-  border: 1px solid;
-  border-color: #b5e1f7;
-  box-shadow: 0 1px rgba(0, 0, 0, 0.05);
-}
-
-.secondary-card .card-header {
-  background-color: #2c7a02c4;
-  color: #fff;
-  font-size: small;
-  font-weight: bold;
-}
 
 .emp-view {
   margin-top: 40px;
 }
-
-.required::after {
-  content: ' *';
-  color: red;
-}
-
 .form-group {
   margin-top: 5px;
   margin-bottom: 0px;
@@ -621,4 +502,22 @@ a{
   margin: 0;
   font-size: small;
   width:12vw;
+}
+.dashboard-icons{
+background: #8adcd2;
+border-radius: 5px;
+padding: 8px;
+border:1px solid #8adcd2;
+color: #fff;
+box-shadow: 0px 0px 6px #a7a4a4 ;
+}
+.dashboard-icons:hover {
+  background-color: #a7a4a4;
+}
+.modal-content {
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .5);
+  width: 800px;
+}
+.modaltd{
+  padding: 10px;
 }
