--- a/src/components/Announcement.css
+++ b/src/components/Announcement.css
@@ -20,7 +20,7 @@
   }
   
   .delete-button {
-    background-color: #dc3545;
+    background-color: #dcb3b7;
     color: white;
     border: none;
     padding: 5px 10px;
@@ -39,4 +39,6 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
-  
+  .form-control {
+    /* margin-bottom: 1rem; */
+}
