--- a/src/components/EmployeeList.css
+++ b/src/components/EmployeeList.css
@@ -3,4 +3,8 @@
     padding: 0.25rem 0.5rem; 
     margin: 0.2rem; 
   }
-  
+  .table td, .table th {
+    padding: 0px;
+    text-align: center;
+    align-content: space-around;
+  }
