--- a/src/components/AttendanceList.css
+++ b/src/components/AttendanceList.css
@@ -40,4 +40,74 @@ padding: 0;
   .cross-icon {
     color: rgb(194, 188, 188); 
   }
+  .filters-container {
+    padding: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+  }
   
+  .filters-container h5 {
+    margin-bottom: 1rem;
+    font-size: 1.25rem;
+    color: #333;
+  }
+  
+  .form-group {
+    /* margin-bottom: 1rem; */
+  }
+
+  .filter-container {
+    padding: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  
+  .filter-container h5 {
+    margin-bottom: 1rem;
+    font-size: 1.25rem;
+    color: #333;
+  }
+  
+  .time-picker-group {
+    margin-bottom: 1rem;
+  }
+  
+  .time-picker-group .form-label {
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+    color: #555;
+  }
+  
+  .time-picker {
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+  .timePicker{
+  padding-inline: 10px;
+  }
+  .react-time-picker__inputGroup__input{
+    width: 4vw !important;
+
+  }
+   .react-time-picker__inputGroup__hour{
+    width: 3vw !important;
+
+  }
+  .react-time-picker__inputGroup__minute{
+    width: 3vw !important;
+   }
+   .react-time-picker__clear-button{
+
+   }
+    .react-time-picker__button{
+      background-color: #8adcd2 !important;
+      border: #8adcd2;
+      margin: 1.5px;;
+    }
