--- a/src/components/AttendanceList.css
+++ b/src/components/AttendanceList.css
@@ -104,10 +104,14 @@ padding: 0;
     width: 3vw !important;
    }
    .react-time-picker__clear-button{
-
+    /* background-color: #8adcd2 !important;
+    border: #8adcd2;
+    margin-right: 1px; */
+    display: none;
    }
     .react-time-picker__button{
-      background-color: #8adcd2 !important;
+      /* background-color: #8adcd2 !important;
       border: #8adcd2;
-      margin: 1.5px;;
+      margin-left: 5px; */
+      display: none;
     }
