fix:employee view

--- a/src/App.css
+++ b/src/App.css
@@ -522,3 +522,9 @@ box-shadow: 0px 0px 6px #a7a4a4 ;
 .modaltd{
   padding: 10px;
 }
+.globalHeader{
+  background: #8adcd2;
+  border-radius: 5px;
+}
+
+
