--- a/src/App.css
+++ b/src/App.css
@@ -482,13 +482,6 @@ a{
   color: #000000;
   font-family: Poppins;
 }
-.mt-1, .my-1 {
-  margin-top: .25rem !important;
-  background-color: #2c7a02c4;
-  color: #fff;
-  padding: 5px;
-  border-radius: 5px;
-}
 .card {
   background-color: #7dc35842;
 }
@@ -509,7 +502,7 @@ background: #8adcd2;
 border-radius: 5px;
 padding: 8px;
 border:1px solid #8adcd2;
-color: #fff;
+color: #000000;
 box-shadow: 0px 0px 6px #a7a4a4 ;
 }
 .dashboard-icons:hover {
